--- a/Lec14/ToDoApp/styles.css
+++ b/Lec14/ToDoApp/styles.css
@@ -74,7 +74,7 @@ header h1 {
     align-items: center;
 }
 
-.todo-item.completed .todo-text {
+.completed {
     text-decoration: line-through;
     color: #888;
 }
